# JAQLN-AI

./: .gitignore  README.md  pyproject.toml
myenv/: pyvenv.cfg
tasks/: EDA.ipynb
tasks/Geo/: geo_utilities.py  osm.py  visualization.ipynb
tasks/Geospatial Analysis /: osm.py  visualization.ipynb
tasks/data/: EDA.ipynb
tasks/model/: hug.ipynb  model.ipynb  nlp_preprocessing.ipynb  nlp_utilities.py  pipeline.ipynb
