[tool.poetry]
name = "jaqln-ai"
version = "0.1.0"
description = "Challenge"
authors = ["angieariza <angie.variza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
requests = "^2.31.0"
shapely = "^2.0.2"
folium = "^0.15.1"
geopandas = "^0.14.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
